# Meta-hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
.github/workflows/: ci.yml  sync-to-hf.yml
files/: 00-winning-plan.md  01-problem-statement.md  02-requirements.md  03-information-architecture.md  04-system-architecture.md  05-database-schema.md  06-api-contracts.md  07-monorepo-structure.md  08-computation-engine-spec.md  09-engineering-scope-definition.md  10-development-phases.md  11-environment-and-devops.md  12-testing-strategy.md  CHANGES.md  architecture-diagram.md  inference.py  openenv.yaml  project-design.md  project-readme.md
server/: __init__.py  app.py  environment.py  grader.py  reward.py
sql_query_reviewer/: __init__.py  client.py  models.py
tasks/: easy_tasks.json  hard_tasks.json  medium_tasks.json
tests/: test_api.py  test_grader.py  test_inference.py  test_models.py  test_reward.py
